--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pallet-ordinals"
 description = "Inscribe Ordinals on Substrate"
-version = "0.0.1"
-publish = false
+version = "1.0.0"
+publish = true
 authors = ["Hoa Le <https://github.com/hoale58-vl>"]
 edition = "2021"
 repository = "https://github.com/hoale58-vl/ordinals-pallet"
@@ -19,14 +19,14 @@ codec = { package = "parity-scale-codec", version = "3.6.1", default-features = 
 scale-info = { version = "2.10.0", default-features = false, features = [
 	"derive",
 ] }
-frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false, optional = true }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
-frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
-sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false }
+frame-benchmarking = { version = "33.0.0", default-features = false, optional = true }
+frame-support = { version = "33.0.0", default-features = false }
+frame-system = { version = "33.0.0", default-features = false }
+sp-runtime = { version = "33.0.0", default-features = false }
+sp-std = { version = "11.0.0-dev.1", default-features = false }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
+sp-core = { version = "24.0.0-dev.1" }
 
 [features]
 default = ["std"]
